# ai-championship-warroom

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SESSION_HANDOFF.md  next-steps.md
solutions/challenge-3/: .gitignore  README.md  pyproject.toml
solutions/challenge-3/scripts/: evaluate.py  prepare_submission.py
solutions/tripletex/: .dockerignore  .gcloudignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  KO_HANDOFF_2026-03-21.md  PLAN.md  PLAN_CHRIS_TAKEOVER.md  README.md  SESSION_HANDOFF.md  SUBMISSION_CHECKLIST.md  docs.md  next-steps.md  pyproject.toml  tripletex-evaluation-feedback-v1.txt
solutions/tripletex/docs/: ARCHITECTURE.md  SCORING.md  TASK_COVERAGE.md  TESTING_RIG.md  TRIPLETEX_DOMAIN.md  WORKFLOWS.md
solutions/tripletex/fixtures/: replay_prompt_fixtures.json
solutions/tripletex/scripts/: bootstrap_invoice_bank_account.py  capture_logs-ko.ps1  capture_logs.sh  deploy-ko.ps1  deploy.sh  inspect_solve_logs.py  post-score.ps1  replay_prompt_fixtures.py  run_prompt.py  run_public_endpoint.py  smoke_read_only.py
solutions/tripletex/session_archive/: 2026-03-20-api-call-plan-dry-run-checkpoint.md  2026-03-20-invoice-drift-hardening-checkpoint.md  2026-03-20-log-observability-and-plan-refresh-checkpoint.md  2026-03-20-pre-api-call-plan-dry-run-checkpoint.md  2026-03-20-pre-first-solve-submission-checkpoint.md  2026-03-20-scaffold-checkpoint.md  2026-03-20-validated-invoicing-checkpoint.md  2026-03-21-Unused_SESSION_HANDOFF.md
solutions/tripletex/tests/: test_api_call_planner.py  test_app.py  test_client.py  test_config.py  test_llm_executor.py  test_log_analysis.py  test_models.py  test_planner.py  test_service.py  test_workflows.py
submissions/grocerybot-ko-version/: .env.example  .gitignore  SESSION_HANDOFF.md  project_tree.txt  protocol.md  pyproject.toml  schemas_easy.json
submissions/grocerybot-ko-version/.claude/: settings.json
submissions/grocerybot-ko-version/handoff_archive/: SESSION_HANDOFF_2026-03-01-0730.md  SESSION_HANDOFF_2026-03-01-1139.md  SESSION_HANDOFF_2026-03-02-2057.md  SESSION_HANDOFF_2026-03-02-2158.md  SESSION_HANDOFF_2026-03-03-0235.md  SESSION_HANDOFF_2026-03-08-1424.md
submissions/grocerybot-ko-version/scripts/: analyze_deep.py  optimize_medium_v4.py  patch_easy_plan.py  replay.py  run.py
submissions/grocerybot-ko-version/spec/: protocol.md  schemas_expert.json
(+376 files in other folders)
