[project]
name = "challenge-3"
version = "0.1.0"
requires-python = ">=3.11"
# Pinned to match sandbox environment exactly
dependencies = [
    "ultralytics==8.1.0",
    "torch==2.6.0",
    "torchvision==0.21.0",
    "pycocotools==2.0.7",
    "opencv-python-headless==4.9.0.80",
    "numpy==1.26.4",
    "scipy==1.12.0",
    "scikit-learn==1.4.0",
    "Pillow==10.2.0",
    "albumentations==1.3.1",
    "timm==0.9.12",
    "ensemble-boxes==1.0.9",
    "safetensors==0.4.2",
    "supervision==0.18.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
]

[tool.uv]
index-url = "https://download.pytorch.org/whl/cu124"
extra-index-url = ["https://pypi.org/simple"]
