[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grocerybot"
version = "0.1.0"
description = "Bot for the NM i AI Grocery Bot WebSocket challenge"
requires-python = ">=3.11"
dependencies = [
    "websockets>=13.0",
    "pydantic>=2.5",
    "python-dotenv>=1.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["src/grocerybot"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
